--- a/gestaoVendas/pom.xml
+++ b/gestaoVendas/pom.xml
@@ -63,6 +63,14 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
+<dependency>
+    <groupId>org.apache.ant</groupId>
+    <artifactId>ant</artifactId>
+    <version>1.10.12</version>
+</dependency>
+
 
 
 	</dependencies>
