--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,10 @@
 	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
 	version="5.0">
 
-	<display-name>gem</display-name>
+	<display-name>ecommerce</display-name>
 
 	<welcome-file-list>
-		<welcome-file>gem/paginas/uteis/login.xhtml</welcome-file>
+		<welcome-file>ecommerce/paginas/nuteis/login.xhtml</welcome-file>
 	</welcome-file-list>
 
 	<servlet>
@@ -25,16 +25,21 @@
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>saga</param-value>
+	</context-param>
 
 	<context-param>
 		<param-name>org.jboss.weld.development</param-name>
 		<param-value>false</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>caminhoLog</param-name>
-		<param-value>/home/limasoftware/log.txt</param-value>
+		<param-value>C:\workcopy\ecommerceWeb\log.txt</param-value>
 	</context-param>
-	
-	
+
+
 </web-app>
