--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,42 +4,35 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
 	version="5.0">
-
 	<display-name>ecommerce</display-name>
-
 	<welcome-file-list>
 		<welcome-file>ecommerce/paginas/nuteis/login.xhtml</welcome-file>
 	</welcome-file-list>
-
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
+
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
-	
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>saga</param-value>
 	</context-param>
-
 	<context-param>
 		<param-name>org.jboss.weld.development</param-name>
 		<param-value>false</param-value>
 	</context-param>
-
 	<context-param>
 		<param-name>caminhoLog</param-name>
-		<param-value>C:\workcopy\ecommerceWeb\log.txt</param-value>
+		<param-value>C:\workcopy\ecommerce\log.txt</param-value>
 	</context-param>
-
 
 </web-app>
