--- a/pom.xml
+++ b/pom.xml
@@ -17,32 +17,32 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.1.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>6.2.6.Final</version>
-		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.primefaces</groupId>-->
-		<!--			<artifactId>primefaces</artifactId>-->
-		<!--			<version>11.0.0</version>-->
-		<!--			<classifier>jakarta</classifier>-->
-		<!--		</dependency>-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.webjars.npm</groupId>-->
-		<!--			<artifactId>primeflex</artifactId>-->
-		<!--			<version>2.0.0</version>-->
-		<!--		</dependency>-->
+		<!-- <dependency> -->
+		<!-- <groupId>org.hibernate</groupId> -->
+		<!-- <artifactId>hibernate-core</artifactId> -->
+		<!-- <version>6.2.6.Final</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.primefaces</groupId> -->
+		<!-- <artifactId>primefaces</artifactId> -->
+		<!-- <version>11.0.0</version> -->
+		<!-- <classifier>jakarta</classifier> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.webjars.npm</groupId> -->
+		<!-- <artifactId>primeflex</artifactId> -->
+		<!-- <version>2.0.0</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.2</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>1.9.4</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>commons-beanutils</groupId> -->
+		<!-- <artifactId>commons-beanutils</artifactId> -->
+		<!-- <version>1.9.4</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 	<properties>
 		<maven.compiler.target>17</maven.compiler.target>
@@ -85,8 +85,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			<!-- O plugin abaixo é utilizado para faler o deploy do WAR no
-			Payara -->
+			<!-- O plugin abaixo é utilizado para faler o deploy do WAR no Payara -->
 			<!-- <plugin> -->
 			<!-- <groupId>com.coderplus.maven.plugins</groupId> -->
 			<!-- <artifactId>copy-rename-maven-plugin</artifactId> -->
@@ -100,8 +99,7 @@
 			<!-- </goals> -->
 			<!-- <configuration> -->
 			<!-- <sourceFile>target/mib4cb2288dd6e148aa.war</sourceFile> -->
-			<!--
-			<destinationFile>/home/limasoftware/Ferramentas2022/payara6/glassfish/domains/domain1/autodeploy/mib4cb2288dd6e148aa.war</destinationFile> -->
+			<!-- <destinationFile>/home/limasoftware/Ferramentas2022/payara6/glassfish/domains/domain1/autodeploy/mib4cb2288dd6e148aa.war</destinationFile> -->
 			<!-- </configuration> -->
 			<!-- </execution> -->
 			<!-- </executions> -->
