--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.1.Final</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.hibernate</groupId> -->
-		<!-- <artifactId>hibernate-core</artifactId> -->
-		<!-- <version>6.2.6.Final</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.2.6.Final</version>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.primefaces</groupId> -->
 		<!-- <artifactId>primefaces</artifactId> -->
@@ -85,7 +85,8 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			<!-- O plugin abaixo é utilizado para faler o deploy do WAR no Payara -->
+			<!-- O plugin abaixo é utilizado para faler o deploy do WAR no
+			Payara -->
 			<!-- <plugin> -->
 			<!-- <groupId>com.coderplus.maven.plugins</groupId> -->
 			<!-- <artifactId>copy-rename-maven-plugin</artifactId> -->
@@ -99,7 +100,8 @@
 			<!-- </goals> -->
 			<!-- <configuration> -->
 			<!-- <sourceFile>target/mib4cb2288dd6e148aa.war</sourceFile> -->
-			<!-- <destinationFile>/home/limasoftware/Ferramentas2022/payara6/glassfish/domains/domain1/autodeploy/mib4cb2288dd6e148aa.war</destinationFile> -->
+			<!--
+			<destinationFile>/home/limasoftware/Ferramentas2022/payara6/glassfish/domains/domain1/autodeploy/mib4cb2288dd6e148aa.war</destinationFile> -->
 			<!-- </configuration> -->
 			<!-- </execution> -->
 			<!-- </executions> -->
