--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.1.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>6.2.6.Final</version>
-		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.hibernate</groupId>-->
+		<!--			<artifactId>hibernate-core</artifactId>-->
+		<!--			<version>6.2.6.Final</version>-->
+		<!--		</dependency>-->
 		<!-- <dependency> -->
 		<!-- <groupId>org.primefaces</groupId> -->
 		<!-- <artifactId>primefaces</artifactId> -->
