--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -15,55 +16,61 @@
 	<dependencies>
 		<dependency>
 			<groupId>jakarta.platform</groupId>
-			<artifactId>jakarta.jakartaee-web-api</artifactId>
-			<version>9.1.0</version>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>10.0.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.1.Final</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.primefaces</groupId> -->
-		<!-- <artifactId>primefaces</artifactId> -->
-		<!-- <version>11.0.0</version> -->
-		<!-- <classifier>jakarta</classifier> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.webjars.npm</groupId> -->
-		<!-- <artifactId>primeflex</artifactId> -->
-		<!-- <version>2.0.0</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.2</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>commons-beanutils</groupId> -->
-		<!-- <artifactId>commons-beanutils</artifactId> -->
-		<!-- <version>1.9.4</version> -->
-		<!-- </dependency> -->
-
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-commons-net</artifactId>
+			<version>1.10.10</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-ant</artifactId>
+			<version>7.0.2</version>
+		</dependency>
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.20.6</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.lowagie</groupId>
-					<artifactId>itext</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>7.0.2</version>
 		</dependency>
-
 		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itext-asian</artifactId>
-			<version>5.2.0</version>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-pdf</artifactId>
+			<version>7.0.2</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.21</version>
+			<classifier>indy</classifier>
+		</dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.target>17</maven.compiler.target>
@@ -84,10 +91,90 @@
 				<includes>
 					<include>**/*.properties</include>
 					<include>**/*.jasper</include>
+					<include>**/*.xml</include>
 				</includes>
 			</resource>
 		</resources>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-antrun-plugin</artifactId>
+										<versionRange>[3.1.0,)</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
+			<!-- <plugin> -->
+			<!-- <groupId>org.wildfly.plugins</groupId> -->
+			<!-- <artifactId>wildfly-maven-plugin</artifactId> -->
+			<!-- <version>5.1.3.Final</version> -->
+			<!-- <configuration> -->
+			<!-- <jboss-home>C:\ferramentas\wildfly-36.0.0.Final</jboss-home> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
+
+			<!-- <plugin> -->
+			<!-- <groupId>org.imixs.maven</groupId> -->
+			<!-- <artifactId>manik-hotdeploy-maven-plugin</artifactId> -->
+			<!-- <version>2.0.1</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <phase>install</phase> -->
+			<!-- <goals> -->
+			<!-- <goal>deploy</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- <configuration> -->
+			<!-- List Source and Target folders for Autodeploy and Hotdeploy -->
+			<!-- <autodeployments> -->
+			<!-- <deployment> -->
+			<!-- wildcard deployment -->
+			<!-- <source>target\ecommerce.war</source> -->
+			<!-- <target>C:/ferramentas/wildfly-36.0.0.Final/standalone/deployments/</target> -->
+			<!-- <unpack>true</unpack> -->
+			<!-- </deployment> -->
+			<!-- </autodeployments> -->
+			<!-- <hotdeployments> -->
+			<!-- <deployment> -->
+			<!-- <source>src/main/java/</source> -->
+			<!-- <target>C:/ferramentas/wildfly-36.0.0.Final/standalone/deployments/ecommerce.war/WEB-INF/classes</target> -->
+			<!-- </deployment> -->
+			<!-- <deployment> -->
+			<!-- <source>src/main/webapp/</source> -->
+			<!-- <target>C:/ferramentas/wildfly-36.0.0.Final/standalone/deployments/ecommerce.war/</target> -->
+			<!-- </deployment> -->
+			<!-- </hotdeployments> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
+
+<!--			<plugin>-->
+<!--				<groupId>io.openliberty.tools</groupId>-->
+<!--				<artifactId>liberty-maven-plugin</artifactId>-->
+<!--				<version>3.11.3</version>-->
+<!--			</plugin>-->
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -95,9 +182,10 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
-					<debug>false</debug>
+					<debug>true</debug>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -111,65 +199,70 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.8</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<id>compile-jasper-reports</id>
+						<phase>generate-resources</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
-						<phase>generate-resources</phase>
 						<configuration>
 							<target>
-								<echo message="Compilando relatorios" />
 								<taskdef name="jrc"
 									classname="net.sf.jasperreports.ant.JRAntCompileTask">
-									<classpath refid="maven.compile.classpath" />
-									<classpath refid="maven.plugin.classpath" />
+									<classpath>
+										<fileset dir="${settings.localRepository}">
+											<!-- Inclua todas as dependências necessárias -->
+											<include name="net/sf/jasperreports/**/*.jar" />
+											<include name="commons-beanutils/**/*.jar" />
+											<include name="commons-collections/**/*.jar" />
+											<include name="commons-logging/**/*.jar" />
+											<include name="org/codehaus/groovy/**/*.jar" />
+										</fileset>
+									</classpath>
 								</taskdef>
-								<jrc srcdir="${basedir}" includes="**/*.jrxml"
-									keepjava="false" xmlvalidation="true" />
+								<jrc
+									srcdir="${project.basedir}/src/main/java/ecommerce/relatorios"
+									destdir="${project.basedir}/src/main/java/ecommerce/relatorios"
+									tempdir="${project.build.directory}" includes="**/*.jrxml"
+									keepjava="false" xmlvalidation="true">
+									<classpath>
+										<path refid="maven.compile.classpath" />
+									</classpath>
+								</jrc>
 							</target>
 						</configuration>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-commons-net</artifactId>
+						<version>1.10.10</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.jasperreports</groupId>
+						<artifactId>jasperreports-ant</artifactId>
+						<version>7.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.jasperreports</groupId>
+						<artifactId>jasperreports</artifactId>
+						<version>7.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sf.jasperreports</groupId>
+						<artifactId>jasperreports-pdf</artifactId>
+						<version>7.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-all</artifactId>
+						<version>2.4.21</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!-- This plugin's configuration is used to store Eclipse m2e settings -->
-				<!-- only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>
-											[1.8,)
-										</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 </project>
