--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,8 @@
 
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
 	version="5.0">
 	<display-name>ecommerce</display-name>
 	<welcome-file-list>
@@ -22,19 +23,20 @@
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
-	
+
 	<context-param>
 		<param-name>org.jboss.weld.development</param-name>
 		<param-value>false</param-value>
 	</context-param>
+
 	<context-param>
 		<param-name>caminhoLogLinux</param-name>
 		<param-value>/home/limasoftware/log.txt</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>caminhoLogWindows</param-name>
-		<param-value>C:\workcopy\ecommerce\log.txt</param-value>
+		<param-value>C:\workcopy\ecommercetrunk\log.txt</param-value>
 	</context-param>
 
 </web-app>
